<resources>
    <string name="app_name">AuthenticationAPI</string>
    <string name="edit">edit</string>
    <string name="logout">logout</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="register">register</string>
    <string name="createAccount">Create New Account</string>
    <string name="login">login</string>
    <string name="enterEmail">Please Enter Email</string>
    <string name="enterPassword">Please Enter Password</string>
    <string name="enterFirstName">Please Enter First Name</string>
    <string name="enterLastName">Please Enter Last Name</string>
    <string name="enterAge">Please Enter Age</string>
    <string name="enterWeight">Please Enter Weight</string>
    <string name="enterAddress">Please Enter Address</string>
    <string name="errorMessage">Error !!!</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="loading">Loading....</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>